# l5

./: .gitignore  LICENSE  README.md  fruits.txt  function.ipynb  guess.py  hello.txt  hello2.txt  hello3.txt  processors.py  products.csv
PDA/: main.py  pyproject.toml
PDA/PDA/: Chapter1.ipynb  Chapter2.ipynb  Chapter3.ipynb  Chapter4.ipynb  Chapter5.ipynb  fruits2.txt  pyproject.toml  ranarr.npy
