[project]
name = "pda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "html5lib>=1.1",
    "jupyter>=1.1.1",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "patsy>=1.0.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "statsmodels>=0.14.5",
]
